[Smart Selection] Fix Reset logging issue

Sometimes Smart Selection logging is not triggered because we false
detected that there is no selection.

Since ShowNonLocatedContextMenu() is making coordinates according to
current selection rect. However, sometimes that doesn't satisfy a check
later one. In that check, We converted coordinates to the character
position in current element then compare with selection range which are
also positions.

We need to make sure such position is in the current selection range,
this CL is adding one pixel to x coordinate to make the check more
robust.

Bug: 787665
Change-Id: I6c6792d54f6f205644719b68f7602e6b4332b056